<resources>
    <string name="app_name">PicTriptation</string>

    <string name="user_name">Username</string>
    <string name="user_email">Useremail</string>

    <string name="button_activity_maps_photo">Foto</string>
    <string name="button_activity_maps_start">Start</string>
    <string name="button_activity_maps_stop">Stop</string>

    <string name="button_dialog_yes">Ja</string>
    <string name="button_dialog_no">Nein</string>

    <string name="dialog_activity_trip_missing_picture_title">Titelbild</string>
    <string name="dialog_activity_trip_missing_picture_message">Bitte erstelle vor dem Speichern ein Titelbild.</string>

    <string name="maps_locationservices_title">Standortdienste</string>
    <string name="maps_locationservices_disabled">Die Standortdienste sind deaktiviert. Möchten Sie sie jetzt aktivieren?</string>
    <string name="maps_no_location">Es konnte kein Standort ermittelt werden</string>

    <string name="my_pictriptation">Meine PicTriptation</string>
    <string name="my_pictriptation_nameimage">Name des Bildes</string>
    <string name="my_pictriptation_nametrip">Name des Trips</string>
    <string name="my_pictriptation_addtrip">+</string>


    <string name="EditText_activity_picture_date">Date</string>
    <string name="EditText_activity_picture_city">City</string>
    <string name="EditText_activity_picture_location">Location</string>
    <string name="EditText_activity_picture_description">Description</string>

    <string name="Button_activity_picture_button">Save</string>

    <string name="pic_note_creation">Erstellung abgebrochen</string>
    <string name="take_foto_first">Bitte vor dem Speichern erst ein Foto aufnehmen.</string>
    <string name="alert_button">OK</string>
    <string name="missing_foto">Fehlendes Foto</string>

    <string name="button_accept">✓</string>
    <string name="button_cancel">✗</string>
    <string name="save">Save</string>

</resources>
