<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UserActivity">





    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logopic"
        />



    <EditText
        android:id="@+id/tvUsername"
        android:layout_width="fill_parent"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        style="@style/Text.SingleLine"
        />

    <EditText
        android:id="@+id/tvUseremail"
        android:layout_width="fill_parent"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        style="@style/Text.SingleLine"
         />


    <LinearLayout
        android:id="@+id/ButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/paddingMedium"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/button_accept"
            style="@style/Button"/>

    </LinearLayout>



</LinearLayout>


